# vici_assessment

./: .gitignore  ASSIGNMENT_REPORT.md  CHANGELOG.md  CLAUDE.md  README.md  README_FOR_DEV.md  pyproject.toml
claude-litellm/: .env.template  README.md  REPORT.md  litellm_config.yaml  pyproject.toml
claude-litellm/docs/: TECHNICAL_GUIDE.md
claude-litellm/docs/brainstorms/: 20260207-095847-claude-da.prd.md
claude-litellm/docs/features/001-claude-da/: .meta.json  design.md  plan.md  prd.md  retro.md  spec.md  tasks.md
claude-litellm/scripts/: seed_demo_db.py
claude-litellm/src/claude_da/: __init__.py  agent.py  audit.py  config.py  exceptions.py  prompt.py  provider.py  schema.py
claude-litellm/tests/: __init__.py  conftest.py
claude-litellm/tests/integration/: __init__.py  test_agent_smoke.py  test_agent_streaming.py  test_e2e_proxy.py  test_error_format.py  test_non_data.py  test_read_only.py
claude-litellm/tests/unit/: __init__.py  test_agent.py  test_audit.py  test_config.py  test_exceptions.py  test_prompt.py  test_provider.py  test_schema.py  test_seed_demo_db.py
docs/: architecture.md
github-claude-skills/: README.md  REPORT.md
stock-backtester/: CHANGELOG.md  README.md  REPORT.md  pyproject.toml
stock-backtester/docs/: TECHNICAL_GUIDE.md
stock-backtester/docs/brainstorms/: 2026-02-07-stat-arb-backtester.prd.md
stock-backtester/docs/features/001-stat-arb-backtester/: .meta.json  .review-history.md  design.md  plan.md  prd.md  retro.md  spec.md  tasks.md
stock-backtester/src/stock_backtester/: __main__.py  cli.py  data.py  engine.py  execution.py  kelly.py  metrics.py  report.py  simulation.py  strategy.py  types.py
stock-backtester/tests/: conftest.py  test_cli.py  test_data.py  test_engine.py  test_execution.py  test_integration.py  test_kelly.py  test_metrics.py  test_nfr.py  test_report.py  test_simulation.py  test_strategy.py  test_types.py
substretcher-plugin/: .gitignore  README.md  install-lib.sh  install.sh  package.json  pnpm-lock.yaml  start-chrome.sh  uninstall.sh  vitest.config.ts
subterminator/: .env.example  README.md  README_FOR_DEV.md  REPORT.md  pyproject.toml
subterminator/docs/: architecture.md
subterminator/docs/brainstorms/: 2026-01-31-vici-challenge.md  2026-02-03-byom-llm-abstraction.prd.md  20260205-ai-driven-browser-control.prd.md  20260205-ai-mcp-redesign.prd.md  20260205-orchestrating-browser-mcps.prd.md
subterminator/docs/features/001-subterminator-cli/: plan.md
subterminator/docs/features/002-ci-cd-auto-merge/: spec.md
subterminator/docs/features/003-byom-llm-abstraction/: .meta.json
subterminator/docs/features/004-interactive-service-selection/: .meta.json  design.md  plan.md  retro.md  tasks.md
subterminator/docs/features/005-browser-session-service-agnostic/: .meta.json  design.md  retro.md
subterminator/docs/features/006-ai-driven-browser-control/: .review-history.md  design.md  plan.md  tasks.md
subterminator/docs/features/007-ai-mcp-browser-control/: README.md  design.md  plan.md  prd.md  spec.md
subterminator/docs/features/007-ai-mcp-browser-control/archive/: spec-v1.md  tasks-v1.md
subterminator/docs/features/007-ai-mcp-browser-control/archive/mcp-v1-implementation/: exceptions.py  types.py
subterminator/docs/features/007-ai-mcp-browser-control/archive/mcp-v1-tests/: test_exceptions.py  test_types.py
subterminator/docs/prds/: 006-ai-driven-browser-control.prd.md  subterminator_cli.md
subterminator/mock_pages/netflix/: aria_test_account.html  cancelplan_complete.html  cancelplan_confirm.html  cancelplan_survey.html  error.html  login.html
subterminator/src/subterminator/: __init__.py  __main__.py
subterminator/src/subterminator/cli/: main.py  output.py
subterminator/src/subterminator/mcp_orchestrator/: __init__.py  checkpoint.py  llm_client.py  mcp_client.py  snapshot.py  task_runner.py  types.py
subterminator/src/subterminator/mcp_orchestrator/services/: __init__.py  base.py  netflix.py
subterminator/src/subterminator/services/: __init__.py  netflix.py  selectors.py
subterminator/src/subterminator/utils/: __init__.py  config.py  exceptions.py  session.py
subterminator/tests/: conftest.py
subterminator/tests/integration/: __init__.py  conftest.py  test_cli_cancel.py
subterminator/tests/unit/: __init__.py  conftest.py  test_cli.py  test_config.py  test_exceptions.py  test_main_module.py  test_netflix_service.py  test_output.py  test_selectors.py
subterminator/tests/unit/cli/: test_accessibility.py  test_prompts.py
subterminator/tests/unit/mcp_orchestrator/: __init__.py  test_checkpoint.py  test_exceptions.py  test_llm_client.py  test_mcp_client.py  test_services.py  test_snapshot.py  test_task_runner.py  test_types.py
subterminator/tests/unit/services/: test_registry.py
tests/: __init__.py  conftest.py
(+188 files in other folders)
